# PulseForge

./: CMakeLists.txt  Makefile  README.md
app/: main.cpp
include/bsp/: FFT.hpp  Filters.hpp  Generators.hpp  Signal.hpp  Spectrum.hpp  Statistics.hpp  Windows.hpp
include/bsp/bio/: ECG.hpp  EEG.hpp  EMG.hpp  EOG.hpp
include/bsp/io/: CsvIO.hpp
include/bsp/viz/: AsciiPlot.hpp  SvgPlot.hpp
src/: FFT.cpp  Filters.cpp  Generators.cpp  Spectrum.cpp  Statistics.cpp  Windows.cpp
src/bio/: ECG.cpp  EEG.cpp  EMG.cpp  EOG.cpp
src/io/: CsvIO.cpp
src/viz/: AsciiPlot.cpp  SvgPlot.cpp
tests/: test_main.cpp
